Fixed spacing throughout page.

--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,6 @@ a:hover {
 .about-me-text {
   text-align: center;
   font-size: 1.3rem;
-  margin-bottom: 1.5rem;
   max-width: 800px;
 }
 
@@ -275,7 +274,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 4rem;
+  margin-bottom: 15px;
 }
 
 .box {
@@ -368,13 +367,14 @@ a:hover {
 
 /* Skills section */
 .skills {
-  height: 130vh;
+  border-top: solid;
 }
 
 .skills h1 {
   text-align: center;
   text-decoration: underline;
   letter-spacing: 3px;
+  margin-top: 4rem;
 }
 
 .skills-container {
@@ -382,9 +382,8 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 725px;
-  height: 415px;
-  border: solid;
+  width: 500px;
+  height: 300px;
 }
 
 .skills-container h3 {
@@ -437,6 +436,7 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-top: solid;
   height: 80vh;
 }
 
@@ -465,6 +465,7 @@ a:hover {
   text-decoration: underline;
   text-underline-offset: 1rem;
   margin-bottom: 2em;
+  margin-top: 4rem;
   letter-spacing: 2px;
 }
 
